--- a/Offer Lagbe/settings.gradle
+++ b/Offer Lagbe/settings.gradle
@@ -6,9 +6,6 @@ pluginManagement {
         maven {
             url ("https://jcenter.bintray.com")
         }
-
-
-
     }
 }
 dependencyResolutionManagement {
@@ -16,12 +13,15 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
+        maven {
+            url 'https://jitpack.io'
+        }
         maven {
             url ("https://jcenter.bintray.com")
         }
 
     }
+
 }
 
 rootProject.name = "Offer Lagbe"
