--- a/Offer Lagbe/app/build.gradle
+++ b/Offer Lagbe/app/build.gradle
@@ -53,5 +53,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.firebase:firebase-core:9.6.1'
+    implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
 apply plugin: 'com.google.gms.google-services'
