--- a/Offer Lagbe/app/build.gradle
+++ b/Offer Lagbe/app/build.gradle
@@ -55,5 +55,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:9.6.1'
     implementation 'com.google.firebase:firebase-storage'
     implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.github.3llomi:CircularStatusView:V1.0.3'
 }
 apply plugin: 'com.google.gms.google-services'
